fix(Dialog): fixed dialog overflow, added header caption control to story

--- a/src/components/Dialog/DialogHeader/DialogHeader.scss
+++ b/src/components/Dialog/DialogHeader/DialogHeader.scss
@@ -18,5 +18,6 @@ $block: '.#{variables.$ns}dialog-header';
 
     &__caption {
         @include mixins.text-subheader-3();
+        word-break: break-word;
     }
 }
